--- a/Igra/Views/Shared/_Layout.cshtml
+++ b/Igra/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/knockout")
+        
     @RenderSection("scripts", required: false)
+    <script src="~/Scripts/Views/gamePageModel.js"></script>
 </body>
 </html>
