Added serverProxy, changed login page, tried to ping web api but unsuccessful

--- a/Igra/Views/Shared/_Layout.cshtml
+++ b/Igra/Views/Shared/_Layout.cshtml
@@ -39,6 +39,10 @@
     @Scripts.Render("~/bundles/knockout")
         
     @RenderSection("scripts", required: false)
-    <script src="~/Scripts/Views/gamePageModel.js"></script>
+
+    @*dodate js biblioteke*@
+    <script src="~/Scripts/Views/gameServerProxy.js"></script>
+    <script src="~/Scripts/Views/gameModel.js"></script>
+
 </body>
 </html>
