--- a/Igra/Views/Login/Index.cshtml
+++ b/Igra/Views/Login/Index.cshtml
@@ -120,10 +120,10 @@
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-6">
-                            <a href="#" class="active" id="login-form-link">Login</a>
+                            <a href="#" class="active" id="login-form-link">Logovanje</a>
                         </div>
                         <div class="col-xs-6">
-                            <a href="#" id="register-form-link">Register</a>
+                            <a href="#" id="register-form-link">Registracija</a>
                         </div>
                     </div>
                     <hr>
@@ -131,21 +131,21 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-12">
-                            <form id="login-form" action="https://phpoll.com/login/process" method="post" role="form" style="display: block;">
+                            <form id="login-form" method="post" role="form" style="display: block;">
                                 <div class="form-group">
-                                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                                    <input type="text" data-bind="value: username" name="username" id="usernameLogin" tabindex="1" class="form-control" placeholder="Korisničko ime">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                                    <input type="password" data-bind="value: password" name="password" id="passwordLogin" tabindex="2" class="form-control" placeholder="Šifra">
                                 </div>
                                 <div class="form-group text-center">
                                     <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-                                    <label for="remember"> Remember Me</label>
+                                    <label for="remember">Zapamti me</label>
                                 </div>
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
-                                            <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
+                                            <input name="login-submit" data-bind="click: login" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Uloguj se">
                                         </div>
                                     </div>
                                 </div>
@@ -153,7 +153,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <div class="text-center">
-                                                <a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
+                                                <a href="#" tabindex="5" class="forgot-password">Zaboravljena šifra?</a>
                                             </div>
                                         </div>
                                     </div>
@@ -161,13 +161,13 @@
                             </form>
                             <form id="register-form" action="https://phpoll.com/register/process" method="post" role="form" style="display: none;">
                                 <div class="form-group">
-                                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                                    <input type="text" name="username" id="usernameRegister" tabindex="1" class="form-control" placeholder="Username" value="">
                                 </div>
                                 <div class="form-group">
                                     <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                                    <input type="password" name="password" id="passwordRegister" tabindex="2" class="form-control" placeholder="Password">
                                 </div>
                                 <div class="form-group">
                                     <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
@@ -189,23 +189,23 @@
 </div>
 
 <script>
-    $(function () {
+    //$(function () {
 
-        $('#login-form-link').click(function (e) {
-            $("#login-form").delay(100).fadeIn(100);
-            $("#register-form").fadeOut(100);
-            $('#register-form-link').removeClass('active');
-            $(this).addClass('active');
-            e.preventDefault();
-        });
-        $('#register-form-link').click(function (e) {
-            $("#register-form").delay(100).fadeIn(100);
-            $("#login-form").fadeOut(100);
-            $('#login-form-link').removeClass('active');
-            $(this).addClass('active');
-            e.preventDefault();
-        });
+    //    $('#login-form-link').click(function (e) {
+    //        $("#login-form").delay(100).fadeIn(100);
+    //        $("#register-form").fadeOut(100);
+    //        $('#register-form-link').removeClass('active');
+    //        $(this).addClass('active');
+    //        e.preventDefault();
+    //    });
+    //    $('#register-form-link').click(function (e) {
+    //        $("#register-form").delay(100).fadeIn(100);
+    //        $("#login-form").fadeOut(100);
+    //        $('#login-form-link').removeClass('active');
+    //        $(this).addClass('active');
+    //        e.preventDefault();
+    //    });
 
-    });
+    //});
 
 </script>
