--- a/Igra/Views/Home/Index.cshtml
+++ b/Igra/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div id="body">
+﻿
+
+
+@*<div id="body">
 
     <h2>Knockout CRUD Operations with MVC4</h2>
     @ViewBag.TotalStudents
@@ -112,4 +115,4 @@
         xhttp.send();
         var response = JSON.parse(xhttp.responseText);
     }
-</script>
+</script>*@
