--- a/Igra/Views/Shared/_Layout.cshtml
+++ b/Igra/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Izloguj se", "Logout", "Login", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
@@ -30,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Igraj svoju igru</p>
         </footer>
     </div>
 
@@ -41,6 +42,7 @@
     @RenderSection("scripts", required: false)
 
     @*dodate js biblioteke*@
+    <script src="~/Scripts/toastr.min.js"></script>
     <script src="~/Scripts/Views/gameServerProxy.js"></script>
     <script src="~/Scripts/Views/gameModel.js"></script>
 
