--- a/Igra/Views/Login/Index.cshtml
+++ b/Igra/Views/Login/Index.cshtml
@@ -173,6 +173,11 @@
                                     <input type="email2" name="email2" data-bind="value: lastnameRegister" id="email2" tabindex="1" class="form-control" placeholder="Prezime">
                                 </div>
                                 <div class="form-group">
+                                    <label class="radio-inline"><input type="radio" value="male" data-bind="checked: gender" name="optradio">Muški</label>
+                                    <label class="radio-inline"><input type="radio" value="female" data-bind="checked: gender" name="optradio">Ženski</label>
+                                    @*<input type="gender" name="email2" data-bind="value: lastnameRegister" id="email2" tabindex="1" class="form-control" placeholder="Prezime">*@
+                                </div>
+                                <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
                                             <input type="submit" data-bind="click: register" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Registruj se">
