--- a/Igra/Views/Tutorial/Index.cshtml
+++ b/Igra/Views/Tutorial/Index.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="item">
                 <div style="width:65%; margin: auto;">
-                    <button href="#" class="btn btn-lg btn-default">Započni igru <span class="glyphicon glyphicon-arrow-right"></span></button>
+                    <button href="#" data-bind="click: gotoGame" class="btn btn-lg btn-default">Započni igru <span class="glyphicon glyphicon-arrow-right"></span></button>
                 </div>
             </div>
         </div>
