--- a/Igra/Views/Shared/_Layout.cshtml
+++ b/Igra/Views/Shared/_Layout.cshtml
@@ -35,7 +35,9 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/jquery")
+        <script src="~/Scripts/jquery.signalR-2.2.3.min.js"></script>
+    <script src="/signalr/hubs"></script>
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/knockout")
         
