--- a/Igra/Views/Tutorial/Index.cshtml
+++ b/Igra/Views/Tutorial/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-    <h2>Carousel Example</h2>
+    @*<h2>Carousel Example</h2>*@
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="10000">
         <!-- Indicators -->
         <ol class="carousel-indicators">
