--- a/Igra/Views/Tutorial/Index.cshtml
+++ b/Igra/Views/Tutorial/Index.cshtml
@@ -2,28 +2,45 @@
     @*<h2>Carousel Example</h2>*@
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="10000">
         <!-- Indicators -->
-        <ol class="carousel-indicators">
+        @*<ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
+        </ol>*@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="~/Images/Slide1.JPG" alt="Uvod" style="width:65%;"/>
+                <img src="~/Images/Slide1.JPG" alt="Naslov" class="slideTutorial"/>
             </div>
 
             <div class="item">
-                <img src="~/Images/Slide2.JPG" alt="Razrada" style="width:65%;" />
+                <img src="~/Images/Slide2.JPG" alt="Uvod" class="slideTutorial" />
             </div>
 
             <div class="item">
-                <img src="~/Images/Slide2.JPG" alt="Zakljucak" style="width:65%;" />
+                <img src="~/Images/Slide3.JPG" alt="Prva igra" class="slideTutorial" />
             </div>
+
             <div class="item">
-                <div style="width:65%; margin: auto;">
-                    <button href="#" data-bind="click: gotoGame" class="btn btn-lg btn-default">Započni igru <span class="glyphicon glyphicon-arrow-right"></span></button>
+                <img src="~/Images/Slide4.JPG" alt="Druga igra" class="slideTutorial" />
+            </div>
+
+            <div class="item">
+                <img src="~/Images/Slide5.JPG" alt="Treća igra" class="slideTutorial" />
+            </div>
+
+            <div class="item">
+                <img src="~/Images/Slide6.JPG" alt="Četvrta igra" class="slideTutorial" />
+            </div>
+
+            <div class="item">
+                <img src="~/Images/Slide7.JPG" alt="Srećno" class="slideTutorial" />
+            </div>
+
+            <div class="item">
+                <div class="slideTutorial text-center" style="height:541.125px; padding: 70px 0;">
+                    <button href="#" data-bind="click: gotoGame" class="btn btn-lg btn-default rucnoCrtano">Započni igru <span class="glyphicon glyphicon-arrow-right"></span></button>
                 </div>
             </div>
         </div>
@@ -31,11 +48,11 @@
         <!-- Left and right controls -->
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only">Prethodni</span>
         </a>
         <a class="right carousel-control" href="#myCarousel" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
+            <span class="sr-only">Sledeći</span>
         </a>
     </div>
 </div>
