--- a/Igra/Views/Tutorial/Index.cshtml
+++ b/Igra/Views/Tutorial/Index.cshtml
@@ -40,7 +40,7 @@
 
             <div class="item">
                 <div class="slideTutorial text-center" style="height:541.125px; padding: 70px 0;">
-                    <button href="#" data-bind="click: gotoGame" class="btn btn-lg btn-default rucnoCrtano">Započni igru <span class="glyphicon glyphicon-arrow-right"></span></button>
+                    <button href="#" data-bind="click: gotoGame" class="btn btn-lg btn-default rucnoCrtano" style="font-size: 36px;">Započni igru <span class="glyphicon glyphicon-arrow-right"></span></button>
                 </div>
             </div>
         </div>
